<resources>
    <string name="app_name">Travelin</string>
    <string name="sign_in_btn">Sign in</string>
    <!-- Flight Input -->
    <string name="enter_flight">Enter your flight</string>
    <string name="enter_curr_location">Enter current location:</string>
    <string name="enter_destination">Enter destination:</string>
    <string name="airline_spinner_prompt">Select Airline</string>
    <string-array name="sample_airlines">
        <item>Air Canada</item>
        <item>WestJet</item>
        <item>American Airlines</item>
    </string-array>
    <string name="submit_btn">Submit</string>
    <!-- Flight Details -->
    <string name="placeHolder_txt">Vancouver to New York</string>
    <string name="more_details_btn">more</string>
    <!-- Flight Fragment1 Details -->
    <string name="placeHolder_time">Scheduled Departure: 9:10 pm</string>
    <!-- Flight Fragment2 Details -->
    <string name="placeHolder_details">Estimated Price Cost: $134</string>
    <string-array name="listOfFlightsName">
        <item>New York</item>
        <item>Toronto</item>
        <item>Ontario</item>
    </string-array>
    <string name="checkFlights">Check Flights</string>
    <string name="checkWeather">Check Weather</string>
    <string name="seeMore">See More</string>
    <string name="heyThere">Hey There!</string>
    <string name="todo">TODO</string>
    <string-array name="daysOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="temperature">
        <item>12 degree Celsius</item>
        <item>13 degree Celsius</item>
        <item>14 degree Celsius</item>
        <item>15 degree Celsius</item>
        <item>16 degree Celsius</item>
        <item>17 degree Celsius</item>
        <item>18 degree Celsius</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login Page Fragment-->
    <string name="login">LOGIN</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up_text_btn"><u>SIGN UP</u></string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>

    <!--Signup Page Fragment-->
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already a user?</string>
    <string name="login_text_btn"><u>LOG IN</u></string>
    <string name="email">Email</string>
</resources>