<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FlightInput">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:gravity="center"
        android:text="@string/enter_flight"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:entries="@array/sample_airlines"
        android:prompt="@string/airline_spinner_prompt" />

    <EditText
        android:id="@+id/editTextCurrentLocation"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/enter_curr_location"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_destination"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:text="@string/submit_btn" />

</LinearLayout>